@@ -1,6 +1,5 @@
 package com.FashionStore.controllers;
 
-import com.FashionStore.models.Banner;
 import com.FashionStore.models.ResponseObject;
 import com.FashionStore.models.StoreInformation;
 import com.FashionStore.repositories.*;
@@ -11,6 +10,8 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.context.MessageSource;
+import org.springframework.context.i18n.LocaleContextHolder;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -34,26 +35,20 @@ public class StoreInformationController {
 
     private final ProductRepository productRepository;
     private final ProductImageRepository productImageRepository;
-
     private final ProductCategoryRepository productCategoryRepository;
-
     private final ProductSizeRepository productSizeRepository;
-
     private final ProductQuantityRepository productQuantityRepository;
-
     private final CategoryRepository categoryRepository;
-
     private final CartItemRepository cartItemRepository;
-
     private final BannerRepository bannerRepository;
-
-
     private final StoreInformationRepository storeInformationRepository;
 
-    private final String appRoot = System.getProperty("user.dir") + File.separator;
+    @Value("${param.storeInformation}")
+    private String PARAM_STORE_INFORMATION;
+    
+    private String RESPONSE_UPDATE_STORE_INFORMATION_SUCCESS;
 
-    @Value("${upload_image.dir}")
-    String UPLOAD_DIR;
+    private String RESPONSE_CREATE_STORE_INFORMATION;
 
     @Autowired
     public StoreInformationController(ProductRepository productRepository,
@@ -64,7 +59,8 @@ public class StoreInformationController {
                                       CategoryRepository categoryRepository,
                                       CartItemRepository cartItemRepository,
                                       BannerRepository bannerRepository,
-                                      StoreInformationRepository storeInformationRepository) {
+                                      StoreInformationRepository storeInformationRepository,
+                                      MessageSource messageSource) {
         this.productRepository = productRepository;
         this.productImageRepository = productImageRepository;
         this.productCategoryRepository = productCategoryRepository;
@@ -74,11 +70,13 @@ public class StoreInformationController {
         this.cartItemRepository = cartItemRepository;
         this.bannerRepository = bannerRepository;
         this.storeInformationRepository = storeInformationRepository;
+        this.RESPONSE_UPDATE_STORE_INFORMATION_SUCCESS = messageSource.getMessage("response.message.update-store-information-success", null, LocaleContextHolder.getLocale());
+        this.RESPONSE_CREATE_STORE_INFORMATION = messageSource.getMessage("response.message.create-store-information", null, LocaleContextHolder.getLocale());
     }
 
-    @PostMapping("/admin/update-store-information")
+    @PostMapping("${api.endpoint.admin.update-store-information}")
     public ResponseEntity<?> updateStoreInformation(HttpServletRequest request) {
-        String storeInformationJson = request.getParameter("storeInformation");
+        String storeInformationJson = request.getParameter(PARAM_STORE_INFORMATION);
         ObjectMapper objectMapper = new ObjectMapper();
 
         StoreInformation storeInformation;
@@ -88,34 +86,29 @@ public class StoreInformationController {
             throw new RuntimeException(e);
         }
 
-        File uploadDir = new File(UPLOAD_DIR);
-        if (!uploadDir.exists()) {
-            uploadDir.mkdirs();
-        }
-
-        storeInformationRepository.deleteAll();;
+        storeInformationRepository.deleteAll();
 
         storeInformationRepository.save(storeInformation);
-        ResponseObject responseObject = new ResponseObject("Đã cập nhật thông tin cửa hàng thành công");
+        ResponseObject responseObject = new ResponseObject(RESPONSE_UPDATE_STORE_INFORMATION_SUCCESS);
         return ResponseEntity.ok(responseObject);
     }
 
-    @GetMapping("/public/get-store-information")
+    @GetMapping("${api.endpoint.public.get-store-information}")
     public ResponseEntity<?> getStoreInformation(HttpServletRequest request) {
         List<StoreInformation> storeInformations = storeInformationRepository.findAll();
         if (storeInformations.isEmpty()) {
-            ResponseObject responseObject = new ResponseObject("Vui lòng tạo thông tin cửa hàng");
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(responseObject);
+            StoreInformation storeInformation = new StoreInformation();
+            ResponseObject responseObject = new ResponseObject(RESPONSE_CREATE_STORE_INFORMATION, storeInformation);
+            return ResponseEntity.ok(responseObject);
         }
-        StoreInformation storeInformation = storeInformations.get(0);
+        StoreInformation storeInformation = storeInformations.getFirst();
         if (storeInformation != null) {
-            ResponseObject responseObject = new ResponseObject("Đã lấy thông tin cửa hàng thành công", storeInformation);
+            ResponseObject responseObject = new ResponseObject(RESPONSE_UPDATE_STORE_INFORMATION_SUCCESS, storeInformation);
             return ResponseEntity.ok(responseObject);
         }
         else {
-            ResponseObject responseObject = new ResponseObject("Vui lòng tạo thông tin cửa hàng");
+            ResponseObject responseObject = new ResponseObject(RESPONSE_CREATE_STORE_INFORMATION);
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(responseObject);
         }
     }
 }
-
